--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #76AB37;
+  font-family: Arial;
+}
+
+.corButao{
+  background: #046419;
+  padding: 10px 30px;
+  color: white;
+
+
+}
+
+h1{
+  font-size: 25px
+}
+p{
+  font-size: 20px;
+  color: #772D56;
 }
