--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,20 @@ p{
   font-size: 20px;
   color: #772D56;
 }
+
+::-webkit-scrollbar {
+  width: 12px; 
+}
+
+::-webkit-scrollbar-track {
+  background: #fff; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #76AB37;
+  border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #046419; 
+}
